--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.3
 gunicorn==22.0.0
 python-dotenv==1.0.1
-requests==2.32.3
+requests
 websocket-client==1.8.0
 pg8000==1.31.5
 Pillow==10.4.0
